--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="card">
        <li class="text-center">
-    <img src="../profile-foto.jpg" alt= "Abdurrahman Uymaz" id="img-profile" class="img-circle">
+    <img src="profile-foto.jpg" alt= "Abdurrahman Uymaz" id="img-profile" class="img-circle">
     <h1>Abdurrahman Uymaz</h1>
     <h2>Full Stack Web Developer @Le Wagon</h2>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
