--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="card">
        <li class="text-center">
-    <img src="profile-foto.jpg" alt= "Abdurrahman Uymaz" id="img-profile" class="img-circle">
+    <img src="images/profile-foto.jpg" alt= "Abdurrahman Uymaz" id="img-profile" class="img-circle">
     <h1>Abdurrahman Uymaz</h1>
     <h2>Full Stack Web Developer @Le Wagon</h2>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -69,7 +69,7 @@
       <tbody>
         <tr>
           <td>
-            <img src="IpMan.jpg" alt="Ip-Man">
+            <img src="images/IpMan.jpg" alt="Ip-Man">
           </td>
           <td>
             <h3>2008 - Ip Man</h3>
@@ -78,7 +78,7 @@
         </tr>
         <tr>
           <td>
-            <img src="Deadpool_poster.jpg" alt="Deadpool">
+            <img src="images/Deadpool_poster.jpg" alt="Deadpool">
           </td>
           <td>
             <h3>Deadpool</h3>
@@ -87,7 +87,7 @@
         </tr>
         <tr>
           <td>
-            <img src="interstellar1.jpg" alt="Interstellar">
+            <img src="images/interstellar1.jpg" alt="Interstellar">
           </td>
           <td>
             <h3>Interstellar</h3>
